...
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.getbase.floatingactionbutton.FloatingActionsMenu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:fab="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fab"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom|end"
  fab:fab_addButtonColorNormal="@color/colorAccent"
  fab:fab_addButtonColorPressed="@color/colorAccentPressed"
  fab:fab_addButtonPlusIconColor="@color/white"
...
    fab:fab_colorNormal="@color/colorPrimary"
    fab:fab_colorPressed="@color/colorPrimaryDark"
    fab:fab_size="mini"
    fab:fab_title="@string/checklist" />

  <com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    fab:fab_icon="@drawable/text_box_white"
    fab:fab_colorNormal="@color/colorAccent"
    fab:fab_colorPressed="@color/colorAccentPressed"
    android:visibility="gone"
...
