<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2025 Federico Iosue (developer@omninotes.app)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clipToPadding="true"
  android:fitsSystemWindows="true">

  <include
    android:id="@+id/toolbar"
    layout="@layout/toolbar" />

  <FrameLayout
    android:id="@+id/content_frame"
    android:layout_below="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg" />

  <include
    android:id="@+id/crouton_handle"
    layout="@layout/crouton_handle" />

</RelativeLayout>
